--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://frjw7491_symfony6_blog:xh1HZuoDy15T@127.0.0.1:3306/frjw7491_symfony6_blog?serverVersion=mariadb-10.3.28"
+DATABASE_URL="mysql://frjw7491:u7ES-YFyd-3gB?@127.0.0.1:3306/frjw7491_symfony6_blog?serverVersion=mariadb-10.3.28"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
