--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpstan/phpdoc-parser": "^1.6",
         "sensio/framework-extra-bundle": "^6.1",
         "stof/doctrine-extensions-bundle": "^1.7",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.1.*",
         "symfony/console": "*",
         "symfony/doctrine-messenger": "6.1.*",
