ajout mailer_dsn dans .env

--- a/.env
+++ b/.env
@@ -39,5 +39,5 @@ DATABASE_URL='mysql://frjw7491_roux2j:Fleurrose0503!@127.0.0.1:3306/frjw7491_Sym
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://11047ec223bd91:b0f4d906969116@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
