--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=prod
 APP_DEBUG=0
+APP_SECRET=ca685055482448d318cff9065fe061bf
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
