--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-# APP_DEBUG=1
+APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=ca685055482448d318cff9065fe061bf
 ###< symfony/framework-bundle ###
 
